# AetherServer

./: .gitignore  Cargo.toml  README.md  identifier.sqlite
src/: aether_msg.rs  aether_session.rs  lib.rs  main.rs
src/aether_msg/: msg.rs  msg_manage.rs
