[package]
name = "Backend_Split"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "sqlite", "tls-native-tls"] }
anyhow = "1.0.98"
dashmap = { version = "6.1.0", features = ["serde"] }
mockall = "0.13.1"
